-
Bug
-
Resolution: Done
-
P0: Blocker
-
4.7.0
-
None
-
4e915e3942c1523ffdda01e36c019f842062b794
Painting text on a transparent pixmap (RGBA) does not paint it in the same position as when painting it into a solid pixmap (RGB). See the cropping on the left of "V" in attached images.
Attached images are reproduced on Linux with attached code.
Result is that all QML text is wrong on OpenGL paint engine, hence Blocker.